--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 
 <!--[if lte IE 8]>
-<script data-main="./app/main.js" src="./app/environments/ie8.js></script>
+<script src="./app/environments/ie8.js></script>
 <![endif]-->
 
-<script data-main="./app/main.js" src="./app/vendor/requirejs/require.js"></script>
+<script data-main="./dist/main.js" src="./app/vendor/requirejs/require.js"></script>
 
 
 </body>
