--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="./app/css/main.css" />
+    <link rel="stylesheet" href="./dist/css/main.css" />
 </head>
 <body>
-
 
 <script data-main="./dist/main.js" src="./app/vendor/requirejs/require.js"></script>
 
