--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <link rel="stylesheet" href="./dist/css/main.css" />
 </head>
 <body>
+<script>
 
-<script data-main="./dist/main.js" src="./app/vendor/requirejs/require.js"></script>
+
+    var globalModule = window;
+    globalModule.AppEnv = "test";
+
+</script>
+<script data-main="./app/main.js" src="./app/vendor/requirejs/require.js"></script>
 
 
 </body>
