--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <script>
 
 
-    var globalModule = window;
-    globalModule.AppEnv = "test";
+//    var globalModule = window;
+//    globalModule.AppEnv = "test";
 
 </script>
-<script data-main="./app/main.js" src="./app/vendor/requirejs/require.js"></script>
 
+<!--<script data-main="./app/main.js" src="./app/vendor/requirejs/require.js"></script>-->
+<script data-main="./dist/main.js" src="./dist/main.js"></script>
 
 </body>
 </html>
